minor layout fixes

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Grow In Kind</title>
         <link rel="stylesheet" href="/assets/style.css">
     </head>
     <body>
@@ -11,7 +11,7 @@
         <nav>
             <div id="logo">Grow In Kind</div>
             <div id="nav-bar">
-                <ul>
+                <ul id="nav-list">
                     <li><a href="#">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -50,27 +50,81 @@
             <div id="content">
 
                 <div id="bonus-tasks">
-                    <div class="bonus task"><button type="button">Bonus Button Text</button></div>
-                    <div class="bonus task"><button type="button">Bonus Button Text</button></div>
-                    <div class="bonus task"><button type="button">Bonus Button Text</button></div>
+                    <div class="bonus task-card">
+                        <button class="task-btn" type="button">Bonus Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="bonus task-card">
+                        <button class="task-btn" type="button">Bonus Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="bonus task-card">
+                        <button class="task-btn" type="button">Bonus Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
                 </div>
 
                 <div id="daily-tasks">
-                    <div class="daily daily1 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily2 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily3 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily4 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily5 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily6 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily7 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily8 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily9 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily10 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily11 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily12 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily13 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily14 task"><button type="button">Daily Button Text</button></div>
-                    <div class="daily daily15 task"><button type="button" disabled>Daily Button Text</button></div>
+                    <div class="daily daily1 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily2 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily3 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily4 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily5 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily6 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily7 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily8 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily9 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily10 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily11 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily12 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily13 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily14 task-card">
+                        <button class="task-btn" type="button">Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
+                    <div class="daily daily15 task-card">
+                        <button class="task-btn" type="button" disabled>Daily Button Text</button>
+                        <div class="task-tag">tag space</div>
+                    </div>
                 </div>
 
                 <div id="sanctuary">
@@ -81,7 +135,9 @@
 
         </main>
 
-        <footer>Copyright (c) SunnyMayo 2024</footer>
+        <footer>
+            <p id="foot">Copyright (c) SunnyMayo 2024</p>
+        </footer>
 
         <script src="/assets/script.js"></script>    
 
